# kvazaar

./: .gitignore  Makefile.am  configure.ac
cli/: Makefile.am  cli.c  cli.h  cli_utils.h  encmain.c  version.h.in  yuv_io.c  yuv_io.h
src/: Makefile.am
